# patdiff

./: .gitignore  CHANGES.md  HOW-TO-PACKAGE  INSTALL.txt  LICENSE.md  META.ab  Makefile  README.md  _oasis  _tags  build-rpm.sh  dune  how-to-roll.org  install.ml  jbuild  myocamlbuild.ml  opam  patdiff-git-wrapper.sh  patdiff.man  patdiff.opam  patdiff.pkg.sexp  setup.ml
ansi_terminal/: ANSITerminal.ml  ANSITerminal.mli  META  ansi_terminal.mldylib  ansi_terminal.mlpack
ansi_text/src/: ansi.ml  ansi.mli  ansi_text.ml  ansi_text.mli  attr.ml  attr.mli  color.ml  color.mli  control.ml  control.mli  dsr.ml  dsr.mli  dune  hyperlink.ml  hyperlink.mli  input_output.ml  input_output.mli  osc.ml  osc.mli  parser.ml  parser.mli  private_mode.ml  private_mode.mli  style.ml  style.mli  style_ranges.ml  style_ranges.mli  text.ml  text.mli  text_with_ansi.ml  text_with_ansi.mli  text_with_style_ranges.ml  text_with_style_ranges.mli  text_with_styles.ml  text_with_styles.mli  unknown_esc.ml  unknown_esc.mli
ansi_text/test/: ansi_text_test.ml  dune  test_control_sequences.ml  test_parsing.ml  test_style_ranges.ml  test_styles.ml  test_text_with_ansi.ml  test_text_with_styles.ml
bench/: bench_compare_core.ml  dune  jbuild
expect_test_patdiff/src/: dune  expect_test_patdiff.ml  expect_test_patdiff.mli
expect_test_patdiff/test/: dune  expect_test_patdiff_tests.ml  test_diff_printer.ml  test_expect_test_patdiff.ml
js-utils/: install_tags.ml
kernel/src/: ansi_output.ml  ansi_output.mli  ascii_output.ml  compare_core.ml  compare_core_intf.ml  comparison_result.ml  comparison_result.mli  configuration.ml  configuration.mli  diff_input.ml  dune  file_helpers.ml  file_helpers.mli  file_name.ml  file_name.mli  float_tolerance.ml  float_tolerance.mli  format.ml  format.mli  html_output.ml  html_output_intf.ml  hunks.ml  hunks.mli  is_binary.ml  (+9 more)
lib/: META  ansi_output.ml  ansi_output.mli  ascii_output.ml  ascii_output.mli  compare_core.ml  compare_core.mli  comparison_result.ml  configuration.ml  configuration.mli  dune  float_tolerance.ml  float_tolerance.mli  html_output.ml  import.ml  is_binary.ml  is_utf8.ml  is_utf8.mli  jbuild  output_intf.ml  output_mode.ml  output_mode.mli  patdiff_core.ml  patdiff_core.mli  patdiff_format.ml  patdiff_format.mli  patdiff_hunks.ml  patdiff_hunks.mli  patdiff_lib.ml  patdiff_lib.mllib  patdiff_lib.mlpack  should_keep_whitespace.ml  should_keep_whitespace.mli  std.ml  text.ml
scripts/: dune  patdiff.pkg.sexp
test/: README.md  common.ml  dune  import.ml  import.mli  jbuild  refresh.ml  setup.sh  test-ascii-output.t  test-directory.t  test-new-empty.t  test-no-trailing-newline.t  test-omake-style-locations.t  test-whitespace.t  test.ml  test_ansi_sequences_in_input.ml  test_binary_files.ml  test_diff_quality.ml  test_float_tolerance.ml  test_hard_to_spot_function_extension.ml  test_hard_to_spot_function_extension.mli  test_hard_to_spot_let_extension.ml  test_interleave.ml  test_patdiff_git_wrapper.ml  test_refined_whitespace.ml  test_runner.ml  test_should_keep_whitespace.ml  test_which_patdiff.ml  visible-colors.sh
(+46 files in other folders)
