opam-version: "2.0"
version: "v0.17.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/patdiff"
bug-reports: "https://github.com/janestreet/patdiff/issues"
dev-repo: "git+https://github.com/janestreet/patdiff.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/patdiff/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"                    {>= "5.1.0"}
  "core"                     {>= "v0.17" & < "v0.18"}
  "core_kernel"              {>= "v0.17" & < "v0.18"}
  "core_unix"                {>= "v0.17" & < "v0.18"}
  "expect_test_helpers_core" {>= "v0.17" & < "v0.18"}
  "patience_diff"            {>= "v0.17" & < "v0.18"}
  "ppx_jane"                 {>= "v0.17" & < "v0.18"}
  "dune"                     {>= "3.11.0"}
  "re"                       {>= "1.8.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "File Diff using the Patience Diff algorithm"
description: "
"
