opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/patdiff"
bug-reports: "https://github.com/janestreet/patdiff/issues"
dev-repo: "git+https://github.com/janestreet/patdiff.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/patdiff/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "core"
  "core_extended"
  "core_kernel"
  "core_unix"
  "expect_test_helpers_core"
  "patience_diff"
  "ppx_jane"
  "angstrom"                 {>= "0.15.0"}
  "dune"                     {>= "3.17.0"}
  "re"                       {= "1.14.0+ox"}
  "uucp"
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "File Diff using the Patience Diff algorithm"
description: "
"
